# GoogleAgenticAI-Workshop

./: .env.example  .gitignore  README.md  pyproject.toml  run_local.sh
agents/content_builder/: agent.py
agents/judge/: agent.py
agents/orchestrator/: agent.py
agents/researcher/: agent.py
solution/agents/content_builder/: agent.py
solution/agents/judge/: agent.py
solution/agents/orchestrator/: agent.py
solution/agents/researcher/: agent.py
travel_concierge/: .env.example  README.md  __init__.py  agent.py  pyproject.toml
travel_concierge/sub_agents/in_trip/: _bootstrap.py  agent.py
travel_concierge/sub_agents/inspiration/: _bootstrap.py  agent.py
travel_concierge/sub_agents/planning/: _bootstrap.py  agent.py
travel_concierge/tools/: flights.py  hotels.py  memory.py
