[project]
name = "gdg-multi-agent-workshop"
version = "0.1.0"
description = "GDG Workshop — Building a Multi-Agent System with Google ADK"
requires-python = ">=3.10,<3.14"
dependencies = [
    "google-adk>=1.0.0",
    "a2a-sdk==0.3.*",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
