[project]
name = "travel-concierge"
version = "0.1.0"
description = "GDG Workshop — Travel Concierge Multi-Agent System"
requires-python = ">=3.10,<3.14"
dependencies = [
    "google-adk>=1.0.0",
    "pydantic>=2.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
